<resources>
    <string name="app_name">TAAM Collections Management App</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>
    <string name="submit">Submit</string>
    <string name="nameHint">Enter name</string>
    <string name="email">Email:</string>
    <string name="emailHint">Enter email</string>
    <string name="username">Username:</string>
    <string name="usernameHint">Enter username</string>
    <string name="password">Password:</string>
    <string name="passwordHint">Enter password</string>
    <string name="loginTitle">TAAM System Login</string>
    <string name="TAAM">TAAM Collections Management</string>
    <string name="mainpage_title">MAINPAGE</string>
    <string name="bg_style">Background Style</string>
    <string name="search_text">Search Item</string>
    <string name="extra_feature">Extra Feature</string>
    <string name="admin_text">Admin Log-in</string>
    <string name="collections_text">View Collection</string>
    <string name="lot_number">Lot Number:</string>
    <string name="name">Name:</string>
    <string name="category">Category:</string>
    <string name="period">Period:</string>
    <string name="description">Description:</string>
    <string name="picture_video">Image/Video:</string>
    <string name="picture_optional">Picture (Optional):</string>
    <string name="remove_item">Remove Item</string>
    <string name="confirm_deletion">Confirm deletion of selected item:</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_taam_collection">Search Collection</string>
    <string name="search">Search</string>
    <string name="e_g_musician_figures">e.g Musician Figures</string>
    <string name="e_g_10102">e.g 10102</string>

    <string-array name="categories_array">
        <item>Jade</item>
        <item>Paintings</item>
        <item>Calligraphy</item>
        <item>Rubbings</item>
        <item>Bronze, Brass, and Copper</item>
        <item>Gold and Silvers</item>
        <item>Lacquer</item>
        <item>Enamels</item>
    </string-array>

    <string-array name="periods_array">
        <item>Xia</item>
        <item>Shang</item>
        <item>Zhou</item>
        <item>Chuanqiu</item>
        <item>Zhanggou</item>
        <item>Qin</item>
        <item>Hang</item>
        <item>Shangou</item>
        <item>Ji</item>
        <item>South and North</item>
        <item>Shui</item>
        <item>Tang</item>
        <item>Liao</item>
        <item>Song</item>
        <item>Jin</item>
        <item>Yuan</item>
        <item>Ming</item>
        <item>Qing</item>
        <item>Modern</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
