<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
        app:layout_constraintEnd_toStartOf="@+id/loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="10dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/emailLabel"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="-180dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="535dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="152dp"
        android:text="@string/loginTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="483dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="200dp"
        android:text="@string/submit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
        app:layout_constraintEnd_toStartOf="@+id/loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="-180dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>