<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F2F2"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="264dp"
        android:contentDescription="@string/bg_style"
        android:src="@drawable/bg_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="247dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/TAAM"
        android:textColor="@color/shaded_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/mainpage_title"
        android:textColor="@color/shaded_white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="170dp"
        android:layout_height="235dp"
        android:background="@drawable/button_view"
        android:backgroundTint="#bfbfbf"
        android:contentDescription="@string/search_text"
        android:scaleType="fitCenter"
        android:src="@drawable/search_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="173dp"
        android:layout_height="235dp"
        android:background="@drawable/button_view"
        android:backgroundTint="#bfbfbf"
        android:contentDescription="@string/extra_feature"
        android:scaleType="fitCenter"
        android:src="@drawable/question_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="175dp"
        android:layout_height="230dp"
        android:background="@drawable/button_view"
        android:backgroundTint="#bfbfbf"
        android:contentDescription="@string/collections_text"
        android:scaleType="fitCenter"
        android:src="@drawable/admin_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="175dp"
        android:layout_height="230dp"
        android:background="@drawable/button_view"
        android:backgroundTint="#bfbfbf"
        android:contentDescription="@string/admin_text"
        android:scaleType="fitCenter"
        android:src="@drawable/chart_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/search_text"
        android:textColor="#9966CB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="126dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/extra_feature"
        android:textColor="#9966CB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/collections_text"
        android:textColor="#9966CB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="131dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/admin_text"
        android:textColor="#9966CB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />


</androidx.constraintlayout.widget.ConstraintLayout>
