<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F2F2"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_view"
            android:backgroundTint="#bfbfbf"
            android:contentDescription="@string/search_text"
            android:scaleType="fitCenter"
            android:src="@drawable/search_image"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_view"
            android:backgroundTint="#bfbfbf"
            android:contentDescription="@string/extra_feature"
            android:scaleType="fitCenter"
            android:src="@drawable/question_image"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_view"
            android:backgroundTint="#bfbfbf"
            android:contentDescription="@string/collections_text"
            android:scaleType="fitCenter"
            android:src="@drawable/admin_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_view"
            android:backgroundTint="#bfbfbf"
            android:contentDescription="@string/admin_text"
            android:scaleType="fitCenter"
            android:src="@drawable/chart_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/search_text"
            android:textColor="#9966CB"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton1"
            app:layout_constraintEnd_toEndOf="@+id/imageButton1"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="@+id/imageButton1"
            app:layout_constraintTop_toTopOf="@+id/imageButton1"
            app:layout_constraintVertical_bias="0.98" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/extra_feature"
            android:textColor="#9966CB"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/collections_text"
            android:textColor="#9966CB"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
            app:layout_constraintEnd_toEndOf="@+id/imageButton4"
            app:layout_constraintStart_toStartOf="@+id/imageButton4"
            app:layout_constraintTop_toBottomOf="@+id/imageButton1"
            app:layout_constraintVertical_bias="0.98" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="131dp"
            android:layout_height="37dp"
            android:gravity="center"
            android:text="@string/admin_text"
            android:textColor="#9966CB"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageButton3"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:layout_constraintVertical_bias="0.98" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="206dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="264dp"
        android:contentDescription="@string/bg_style"
        android:src="@drawable/bg_view"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="247dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/TAAM"
        android:textColor="@color/shaded_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/homeTittle"
        android:layout_width="379dp"
        android:layout_height="116dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/mainpage_title"
        android:textColor="@color/shaded_white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />


</androidx.constraintlayout.widget.ConstraintLayout>
